# grpc-java

./: .bazelrc  .gitattributes  .gitignore  .travis.settings.xml  .travis.yml  AUTH-README.md  BUILD  BUILD.bazel  COMPILING.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MODULE.bazel  NOTICE.txt  README.md  README.txt  RELEASING.md  SECURITY.md  WORKSPACE  build.gradle  checkstyle.license  checkstyle.xml  codecov.yml  countPrimes.java  ga.patch  google-java-format.gradle  gradle.properties  grpc-java-team-sonatype.public.asc  index.html  java_grpc_library.bzl  java_import_external.bzl  jules-run-tests.sh  jules-setup.sh  lint.xml  maven_install.json  pom.xml  repositories.bzl  run-test-client.sh  run-test-server.sh  settings.gradle
alts/: BUILD.bazel  build.gradle
android/: BUILD.bazel  build.gradle  proguard-rules.txt
android/src/main/: AndroidManifest.xml
api/: BUILD.bazel  build.gradle
auth/: BUILD.bazel  build.gradle
authz/: BUILD.bazel  build.gradle
binder/: BUILD  BUILD.bazel  build.gradle
binder/src/androidTest/: AndroidManifest.xml
binder/src/main/: AndroidManifest.xml
census/: BUILD.bazel  build.gradle
compiler/: BUILD.bazel  Dockerfile  README.md  build.gradle  check-artifact.sh
compiler/src/java_plugin/cpp/: java_generator.cpp  java_generator.h  java_plugin.cpp
compiler/src/test/golden/: TestDeprecatedService.java.txt  TestService.java.txt  TestServiceNano.java.txt
compiler/src/test/proto/: test.proto
compiler/src/testLite/golden/: TestDeprecatedService.java.txt  TestService.java.txt
compiler/src/testNano/golden/: TestDeprecatedService.java.txt  TestService.java.txt
core/: BUILD  BUILD.bazel  build.gradle  proguard.flags
examples/: AUTHENTICATION_EXAMPLE.md  BUILD.bazel  GOOGLE_AUTH_EXAMPLE.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  build.gradle  logging.properties  maven-assembly-jar-with-dependencies.xml  maven_install.json  pom.xml  settings.gradle
examples/android/: README.md
examples/android/app/: build.gradle
examples/android/clientcache/: build.gradle  settings.gradle
examples/android/clientcache/app/: build.gradle
examples/android/helloworld/: build.gradle
examples/android/helloworld/app/: BUILD.bazel  build.gradle
examples/android/routeguide/: README.md  build.gradle
examples/android/routeguide/app/: build.gradle  proguard-rules.pro
examples/android/strictmode/: README.md  build.gradle
examples/android/strictmode/app/: build.gradle  proguard-rules.pro
examples/example-alts/: BUILD.bazel  build.gradle
examples/example-alts/example-alts/: README.md
examples/example-debug/: README.md  build.gradle  pom.xml  settings.gradle
examples/example-dualstack/: README.md  build.gradle  pom.xml  settings.gradle
examples/example-gauth/: BUILD.bazel  GOOGLE_AUTH_EXAMPLE.md  README.md  build.gradle  pom.xml
examples/example-gcp-csm-observability/: README.md  build.gradle  csm-client.DockerFile  csm-client.Dockerfile  csm-server.DockerFile  csm-server.Dockerfile  settings.gradle
examples/example-gcp-observability/: README.md  build.gradle  settings.gradle
examples/example-hostname/: BUILD.bazel  README.md  build.gradle  pom.xml  settings.gradle
examples/example-jwt-auth/: README.md  build.gradle  pom.xml  settings.gradle
examples/example-kotlin/: README.md  build.gradle
examples/example-kotlin/android/helloworld/: build.gradle
examples/example-oauth/: README.md  build.gradle  pom.xml  settings.gradle
examples/example-opentelemetry/: README.md  build.gradle  settings.gradle
examples/example-orca/: README.md  build.gradle  settings.gradle
examples/example-reflection/: README.md  build.gradle  settings.gradle
examples/example-servlet/: README.md  build.gradle
examples/example-tls/: BUILD.bazel  README.md  WORKSPACE  build.gradle  pom.xml
examples/example-xds/: README.md  build.gradle  settings.gradle  xds-client.Dockerfile  xds-server.Dockerfile
examples/examples-log4j/: build.gradle
examples/examples-log4j2/: README.md  build.gradle
examples/google-app-engine/: README.md
examples/google-app-engine/gae-jdk7/: build.gradle  pom.xml
examples/google-app-engine/gae-jdk8/: build.gradle  pom.xml
examples/gradle/wrapper/: gradle-wrapper.properties
examples/src/main/proto/: debug_info.proto  echo.proto  error_details.proto  file_download.proto  healthcheck.proto  hello_streaming.proto  helloworld.proto  pubsub.proto  route_guide.proto  testservice.proto
examples/sslcerts/: ca.crt  ca.key  client.crt  client.csr  client.key  client.pem  gencert.sh  server.crt  server.csr  server.key  server.pem
examples/thrift/: build.gradle
googleapis/: BUILD.bazel  build.gradle
grpclb/: BUILD.bazel  build.gradle
inprocess/: BUILD.bazel  build.gradle
java_grpc_library/: BUILD.bazel  def.bzl  toolchain.bzl
netty/: BUILD  BUILD.bazel  build.gradle  pom.xml
netty/shaded/: BUILD.bazel  build.gradle  native-image.properties
observability/: BUILD.bazel  build.gradle
okhttp/: BUILD  BUILD.bazel  build.gradle  pom.xml  proguard.flags
protobuf/: BUILD  BUILD.bazel  build.gradle
protobuf-lite/: BUILD  BUILD.bazel  build.gradle
protobuf-lite/src/test/proto/: messages.proto  simple_recursive.proto
rls/: BUILD.bazel  build.gradle
s2a/: BUILD.bazel  build.gradle
s2a/src/test/resources/: README.md  cert_chain_ec.pem  client.csr  client_cert.pem  client_key.pem  config.cnf  int_cert1_.cnf  int_cert1_ec.pem  int_cert2.cnf  int_cert2_ec.pem  int_key1_ec.pem  int_key2_ec.pem  leaf.cnf  leaf_cert_ec.pem  leaf_key_ec.pem  root_cert.pem  root_cert_ec.pem  root_ec.cnf  root_key.pem  root_key_ec.pem  server.csr  server_cert.pem  server_key.pem
services/: BUILD.bazel  build.gradle
services/src/main/proto/: census.proto  health.proto  monitoring.proto  reflection.proto
stub/: BUILD  BUILD.bazel  build.gradle
testing/: BUILD.bazel  build.gradle  proguard.flags
testing-proto/: BUILD.bazel  build.gradle  test.desc  test.yaml  test_gapic.yaml  test_pkg.yaml
util/: BUILD.bazel  build.gradle
xds/: BUILD.bazel  build.gradle
xds/src/main/proto/: bootstrap.proto
(+5333 files in other folders)
