load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "api",
    srcs = glob([
        "src/main/java/**/*.java",
        "src/context/java/**/*.java",
    ]),
    javacopts = ["-Xep:DoNotCall:OFF"],  # Remove once requiring Bazel 3.4.0+; allows non-final
    visibility = ["//visibility:public"],
    deps = [
        artifact(
            "com.google.code.findbugs:jsr305",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.errorprone:error_prone_annotations",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.guava:failureaccess",
            repository_name = "grpc_java_maven",
        ),  # future transitive dep of Guava. See #5214
        artifact(
            "com.google.guava:guava",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.j2objc:j2objc-annotations",
            repository_name = "grpc_java_maven",
        ),
    ],
)
