load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "api",
    srcs = glob([
        "src/main/java/**/*.java",
        "src/context/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        artifact("com.google.code.findbugs:jsr305"),
        artifact("com.google.errorprone:error_prone_annotations"),
        artifact("com.google.guava:failureaccess"),  # future transitive dep of Guava. See #5214
        artifact("com.google.guava:guava"),
    ],
)
