java_library(
    name = "auth",
    srcs = glob([
        "src/main/java/io/grpc/auth/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "@maven//:com_google_auth_google_auth_library_credentials",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_j2objc_j2objc_annotations",
    ],
)
