load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "auth",
    srcs = glob([
        "src/main/java/io/grpc/auth/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        artifact(
            "com.google.auth:google-auth-library-credentials",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.code.findbugs:jsr305",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.guava:guava",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.j2objc:j2objc-annotations",
            repository_name = "grpc_java_maven",
        ),
    ],
)
