load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "auth",
    srcs = glob([
        "src/main/java/io/grpc/auth/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        artifact("com.google.auth:google-auth-library-credentials"),
        artifact("com.google.code.findbugs:jsr305"),
        artifact("com.google.guava:guava"),
    ],
)
