java_library(
    name = "authz",
    srcs = glob([
        "src/main/java/io/grpc/authz/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_guava_guava//jar",
        "@com_google_j2objc_j2objc_annotations//jar",
    ],
)
