java_library(
    name = "census",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//context",
        "@grpc_java_maven//:com_google_code_findbugs_jsr305",
        "@grpc_java_maven//:com_google_guava_guava",
        "@grpc_java_maven//:io_opencensus_opencensus_api",
        "@grpc_java_maven//:io_opencensus_opencensus_contrib_grpc_metrics",
    ],
)
