load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "census",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//context",
        artifact(
            "com.google.code.findbugs:jsr305",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.guava:guava",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.opencensus:opencensus-api",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.opencensus:opencensus-contrib-grpc-metrics",
            repository_name = "grpc_java_maven",
        ),
    ],
)
