load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "census",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//core:internal",
        "//context",
        artifact("com.google.code.findbugs:jsr305"),
        artifact("com.google.guava:guava"),
        artifact("io.opencensus:opencensus-api"),
        artifact("io.opencensus:opencensus-contrib-grpc-metrics"),
    ],
)
